@@ -3,7 +3,10 @@ package org.alejandrovillar.functions;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AnaliceCSV {
 
@@ -11,11 +14,10 @@ public class AnaliceCSV {
 
     public static List<String[]> analiceCSV(Path pathCSV) throws IOException {
         List<String> linesCSV = Files.readAllLines(pathCSV);
-
         linesCSV.removeFirst();
 
-
-        return linesCSV.stream().map(linea -> linea.replace('"', ' ').split(",", -1)).toList();
-
+        return linesCSV.stream()
+                .map(s -> s.split(",(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)", -1))
+                .collect(Collectors.toList());
     }
 }
